Add option to skip the commit SHA check

--- a/README.rdoc
+++ b/README.rdoc
@@ -42,6 +42,9 @@ After experimenting with several workflows for deployment in git, I've finally f
 * You can only push a staging tag to production. This helps to enforce QA of all pushes to production.
 * If you specify :remote and in your Cap config, you can use the latest commit from that remote instead of the origin default.
   E.g. set :remote, 'upstream'
+* You can specify :gitflow_check, false to tag and push the current master as staging without comparing your local commits.
+  E.g. set :gitflow_check, false
+
 
 === PUSH TO STAGING
 
